--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -112,7 +112,7 @@ It's come a long way and I have to thank my colleagues at CMU, colleagues at Doo
 
 I think a lot about whether my Ph.D. experience was worth it or not as it slowly comes to a close.  
 
-First, I did not work exactly what I thought I would, and therefore my Ph.D. ended up being quite different than what I thought my Ph.D would be.  I started in CRDTs, I left that area and moved to program analysis and testing.  This made sense for me, but only in retrospect: I had done testing for years before moving to Basho, and did distributed systems testing at Basho.  It was a thing I was good at, and as my initial blog post shows, it was where this entire blog started before I even started my Ph.D.  So, it makes sense, but it _was not the thing I signed up to do and wasn't what I set out to do._  This wasn't a big thing for me --- I feel like I discovered my true calling --- but, it's something that happend.
+First, I did not work exactly what I thought I would, and therefore my Ph.D. ended up being quite different than what I thought my Ph.D would be.  I started in CRDTs; I left that area and moved to program analysis and testing.  This made sense for me, but only in retrospect: I had done testing for years before moving to Basho and then did distributed systems testing at Basho.  Testing was a thing I was good at --- and as my initial blog post indicates, and it was the motivation for my initial blog post 10 years ago ---  before I even started a Ph.D.  So, _for me_, it makes sense, but it _was not the thing I signed up to do and wasn't what I set out to do._  This wasn't a dealbreaker for me --- I feel like I discovered my true calling --- but, it's something that happend.
 
 When it comes to the negatives of the Ph.D., they are quite clear:
 
