--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -69,7 +69,7 @@ My first semester, I failed out of one of my courses and landed in the hospital 
 In late 2018, I started playing around with the idea of fault injection. 
 My previous paper, Partisan, had been focused on building a distributed runtime: my thinking was that if you control the runtime, you can inject faults any of the communication that is performed by the runtime.  It seemed the clear natural extension of the Partisan work, and would be a good second (of 3) piece of my Ph.D. thesis.
 
-So, to demonstrate, I built several example applications, adapted blockchain applications and distributed databases, all to use this fault injection framework.  However, it was simply too rudimentary to find bugs.  I just couldn't compete with any technique that used model checking with advanced heuristics and the same year I tried to publish my work which was rejected, someone came out with something far more advanced for Erlang.  
+So, to demonstrate, I built several example applications, adapted blockchain applications and distributed databases, all to use this fault injection framework.  I even implemented 3 different transaction protocols based on my previous work at Microsoft Rsearch.  However, my work was just too simplistic to find bugs.  I just couldn't compete with any technique that used model checking with advanced heuristics and the same year I tried to publish my work which was rejected, someone came out with something far more advanced for Erlang.  
 
 But, this idea stuck with me and I kept on working it.  Instead, I thought, rather than try to target concurrency bugs, where so many existing researchers are working, why not target microservice bugs, where no one is working instead?  
 
