--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -79,7 +79,7 @@ I wrote a Microsoft Research Fellowship Proposal in early 2019 that started like
 
 <img src="/img/msr-1.png" style="width: 100%">
 
-Rejected.
+❌ Rejected.
 
 I was dissappointed, but I was lucky enough to get an internship at Amazon in Automated Reasoning working on S3 to do concurrency testing and model checking that same week, so it mitigated the blow of yet another rejection.  
 
