--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -96,9 +96,9 @@ In my perpsective, this is when _my Ph.D. actually started_: the first Filibuste
 From this point forward, it's been a whirlwind experience, which I've blogged about in detail:
 
 * Filibuster's results led to some [industry adoption](https://doordash.engineering/2022/04/25/using-fault-injection-testing-to-improve-doordash-reliability/) and sponsorship of future development;
-* Filibuster was completely reimplemented in Java and adapted to handle GRPC;
+* Filibuster was completely [reimplemented in Java and adapted to handle GRPC](https://github.com/filibuster-testing/filibuster-java-instrumentation);
 * Filibuster's work led to a [joint published paper at SoCC '22 with DoorDash](https://christophermeiklejohn.com/publications/socc2022-preprint.pdf) on circuit breaker usage for fault tolerance in '22;
-* Filibuster now provides an integrated development experience in Java with JUnit integration and IntelliJ plugin integration in '23;
+* Filibuster now provides an [integrated development experience in Java with JUnit integration and IntelliJ plugin integration](https://plugins.jetbrains.com/plugin/21057-filibuster-for-macos-linux-) in '23;
 * Filibuster has been the focus of multiple students undergraduate research projects;
 * Filibuster is the subject of an upcoming master's thesis on fault injection for database calls; and
 * developers are actually starting to use Filibuster.
