--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -143,7 +143,9 @@ What a fucking journey, that's all I can say.
 
 <img src="/img/trey.gif" style="width: 100%">
 
-_...waiting for the time when I can finally say, this has all been wonderful but now I'm on my way..._ - Phish
+<p style="text-align:center">
+_...waiting for the time when I can finally say, this has all been wonderful but now I'm on my way..._
+</p>
 
 
 
