--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -144,7 +144,7 @@ What a fucking journey, that's all I can say.
 <img src="/img/trey.gif" style="width: 100%">
 
 <p style="text-align:center">
-<i>...waiting for the time when I can finally say, this has all been wonderful, but now I'm on my way...</i>
+<i>"...waiting for the time when I can finally say, this has all been wonderful, but now I'm on my way..."</i>
 </p>
 
 
