--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -15,7 +15,7 @@ But, perhaps what is most interesting to me, is that the genesis of this blog wa
 
 Things change: shit, it's been only 10 years!
 
-In some ways, it is fitting that this 10 year milestone corresponds with the year that I will (ideally) defend my Ph.D. at Carnegie Mellon University.  If not this year, early next year at the latest.
+In some ways, it is fitting that this 10 year milestone corresponds with the year that I will (hopefully) defend my Ph.D. at Carnegie Mellon University: if not this year, early next year at the latest.
 
 ### The Inticement of Research
 
