--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -19,7 +19,7 @@ In some ways, it is fitting that this 10 year milestone corresponds with the yea
 
 ### The Inticement of Research
 
-I started this blog as a Software Engineer at Basho Technologies, a now-defunct distributed systems company that was primarily focused on writing a fault-tolerant, highly scalabile distributed database in Erlang.  At the time, I was a JavaScript developer building the UX for Basho's distributed database, Riak.  I did not know Erlang --- only enough to maintain a job where I had to produce JSON from Erlang to build the UX for Riak --- and, I barely knew JavaScript.  However, I was not new to programming as I had been a software engineer, systems engineer, and even a software engineering manager for many years before coming to Basho.  But, I ended up here because when I became a manager, I decided it wasn't for me and I wanted to be a programmer again and restarted my career from the beginning as a junior developer and working my way back up.  I slowly moved from being primarily a TCL programmer for web applications --- ArsDigita crew represent! --- to manager, and then back down again to a Ruby programmer, and up again, to finally, a JavaScript developer at Basho.
+I started this blog as a Software Engineer at Basho Technologies, a now-defunct distributed systems company that was primarily focused on writing a fault-tolerant, highly scalable distributed database in Erlang.  At the time, I was a JavaScript developer building the UX for Basho's distributed database, Riak.  I did not know Erlang --- only enough to maintain a job where I had to produce JSON from Erlang to build the UX for Riak --- and, I barely knew JavaScript.  However, I was not new to programming as I had been a software engineer, systems engineer, and even a software engineering manager for many years before coming to Basho.  But, I ended up here because when I became a manager, I decided it wasn't for me and I wanted to be a programmer again and restarted my career from the beginning as a junior developer and working my way back up.  I slowly moved from being primarily a TCL programmer for web applications --- ArsDigita crew represent! --- to manager, and then back down again to a Ruby programmer, and up again, to finally, a JavaScript developer at Basho.
 
 I really knew nothing of distributed systems at the time.  I didn't read my first distributed systems paper until 2012.
 
