--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -25,7 +25,7 @@ I really knew nothing of distributed systems at the time.  I didn't read my firs
 
 However, by 2013, I was very interested in both Erlang and distributed systems and by merely playing around in my spare time, had wandered into the area of fault injection and fault tolerance.  My [first](https://christophermeiklejohn.com/erlang/2013/06/03/erlang-pg2-failure-semantics.html) and [second](https://christophermeiklejohn.com/erlang/2013/06/05/erlang-gproc-failure-semantics.html) blog posts were specifically on this very topic.  I did not know at all what I was doing -- as I've said numerous times in the past, writing is a way for me to understand something and I write specifically to help clarify my own thinking on a topic.  In short, I found something that was interesting, started writing about it, and then wrote code to figure it out.
 
-In 2013, I decided I wanted to start grad school to _really_ learn about a programming area, as as I was living in Rhode Island, reached out to Brown University, where some members of my family had attended.  They wanted nothing to do with me for several reasons.  First, I didn't have a degree in CS, because I got one in IT part-time at Northeastern University after getting an associates' degree at the Community College of Rhode Island.  Second, I had no research experience.  I was told "no research potential" by one prominant faulty member, which reminded me of Zappa's infamous "no commercial potential" response.  Finally, after reaching out to a professor at Brown based on a paper he published that I had reimplemented for fun -- and once I told him that I programmed Erlang in industry --- he gave me permission to enroll in courses as a "special student."
+In 2013, I decided I wanted to start grad school to _really_ learn about a programming area, as as I was living in Rhode Island, reached out to Brown University, where some members of my family had attended.  They wanted nothing to do with me for several reasons.  First, I didn't have a degree in CS, because I got one in IT part-time at Northeastern University after getting an associate's degree at the Community College of Rhode Island.  Second, I had no research experience.  I was told "no research potential" by one prominant faulty member, which reminded me of Zappa's infamous "no commercial potential" response.  Finally, after reaching out to a professor at Brown based on a paper he published that I had reimplemented for fun -- and once I told him that I programmed Erlang in industry --- he gave me permission to enroll in courses as a "special student."
 
 A "special student" means a couple different things.  First, that you have to carry around a bright pink slip to all of your courses on the first day of classes begging to be admitted to the professor of the class, as you are not a degree student.  Second, that you have to pay your own way --- at the time, $6k a course.  I doubled down, got my slips signed, and blew a family inheritance to take my courses.  I took a database seminar (not knowing what a seminar was) and a programming language course with Coq (not knowing what Coq or programming language's really were, outside of writing programs.)  I got lucky in that both of my course projects were decent.  In fact, I dicussed one at RICON, the distributed systems conference in 2013: my work on writing CRDT proofs --- really, really, awful trivial proofs, but the first person to actually _try_ writing proofs for CRDTs --- and it seemingly got me noticed by many people in the field.  I was in!
 
