--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -19,7 +19,7 @@ In some ways, it is fitting that this 10 year milestone corresponds with the yea
 
 ### The Inticement of Research
 
-I started this blog as a Software Engineer at Basho Technologies, a now-defunct distributed systems company that was primarily focused on writing a fault-tolerant, highly scalable distributed database in Erlang.  At the time, I was a JavaScript developer building the UX for Basho's distributed database, Riak.  I did not know Erlang --- only enough to maintain a job where I had to produce JSON from Erlang to build the UX for Riak --- and, I barely knew JavaScript.  However, I was not new to programming as I had been a software engineer, systems engineer, and even a software engineering manager for many years before coming to Basho.  But, I ended up here because when I became a manager, I decided it wasn't for me and I wanted to be a programmer again and restarted my career from the beginning as a junior developer and working my way back up.  I slowly moved from being primarily a TCL programmer for web applications --- ArsDigita crew represent! --- to manager, and then back down again to a Ruby programmer, and up again, to finally, a JavaScript developer at Basho.
+I started this blog as a Software Engineer at Basho Technologies, a now-defunct distributed systems company that was primarily focused on writing a fault-tolerant, highly scalable distributed database in Erlang.  At the time, I was a JavaScript developer building the UX for Basho's distributed database, Riak.  I did not know Erlang --- only enough to maintain a job where I had to produce JSON from Erlang to build the UX for Riak --- and, I barely knew JavaScript.  However, I was not new to programming as I had been a software engineer, systems engineer, and even a software engineering manager for many years before coming to Basho.  But, I ended up here because when I became a manager, I decided it wasn't for me and I wanted to be a programmer again and restarted my career from the beginning as a junior developer and working my way back up.  I slowly mo/vowved from being primarily a TCL programmer for web applications --- ArsDigita crew represent! --- to manager, and then back down again to a Ruby programmer, and up again, to finally, a JavaScript developer at Basho.
 
 I really knew nothing of distributed systems at the time.  I didn't read my first distributed systems paper until 2012.
 
@@ -27,7 +27,7 @@ However, by 2013, I was very interested in both Erlang and distributed systems a
 
 In 2013, I decided I wanted to start grad school to _really_ learn about a programming area, as as I was living in Rhode Island, reached out to Brown University, where some members of my family had attended.  They wanted nothing to do with me for several reasons.  First, I didn't have a degree in CS, because I got one in IT part-time at Northeastern University after getting an associate's degree at the Community College of Rhode Island.  Second, I had no research experience.  I was told "no research potential" by one prominant faulty member, which reminded me of Zappa's infamous "no commercial potential" response.  Finally, after reaching out to a professor at Brown based on a paper he published that I had reimplemented for fun -- and once I told him that I programmed Erlang in industry --- he gave me permission to enroll in courses as a "special student."
 
-A "special student" means a couple different things.  First, that you have to carry around a bright pink slip to all of your courses on the first day of classes begging to be admitted to the professor of the class, as you are not a degree student.  Second, that you have to pay your own way --- at the time, $6k a course.  I doubled down, got my slips signed, and blew a family inheritance to take my courses.  I took a database seminar (not knowing what a seminar was) and a programming language course with Coq (not knowing what Coq or programming language's really were, outside of writing programs.)  I got lucky in that both of my course projects were decent.  In fact, I dicussed one at RICON, the distributed systems conference in 2013: my work on writing CRDT proofs --- really, really, awful trivial proofs, but the first person to actually _try_ writing proofs for CRDTs --- and it seemingly got me noticed by many people in the field.  I was in!
+A "special student" means a couple different things.  First, that you have to carry around a bright pink slip to all of your courses on the first day of classes begging to be admitted to the professor of the class, as you are not a degree student.  Second, that you have to pay your own way --- at the time, $6k a course.  I doubled down, got my slips signed, and blew a family inheritance to take my courses.  I took a database seminar (not knowing what a seminar was) and a programming language course with Coq (not knowing what Coq or programming languages really were, outside of writing computer programs.)  I got lucky in that both of my course projects were decent.  In fact, I dicussed one at RICON, the distributed systems conference in 2013: my work on writing CRDT proofs --- really, really, awful trivial proofs, but the first person to actually _try_ writing proofs for CRDTs --- and it seemingly got me noticed by many people in the field.  I was in!
 
 In 2014, Basho established a research consortium with a number of universities in the European Union to work on the development of CRDTs for use inside of Riak.  I wasn't invited, but several of my friends/colleagues were.  One January evening, lying in bed with the flu in my parents spare bedroom a few days after Christmas, I asked a colleague where they were going in Europe in a nondescript manner.  When I found out, I applied for a Delta credit card, bought a flight, booked an AirBnb in the city and just showed up there myself and said "hey, I'm with Basho."  From then on, I became involed in the research project in several capactities over time.
 
