--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -13,7 +13,7 @@ Since creation of this blog, I've been lucky to have _many_ of these posts make 
 
 But, perhaps what is most interesting to me, is that the genesis of this blog was at the exact moment that I first ventured into research.  When I started my dream in 2013 --- when I started this blog sitting in a wicker chair in the corner of the living room of my close friend Greg in San Francisco with a re-run of _Friends_ on in the background --- my goal was to work at Microsoft Research.  When I started my Ph.D. in 2015, my goal was to be a professor in France.  In 2018, I thought I might be a teaching professor in the US.  In 2023: ??? 
 
-Things change: shit, it's been only 10 years!
+Things change: shit, it's been _only_ 10 years!
 
 In some ways, it is fitting that this 10 year milestone corresponds with the year that I will (hopefully) defend my Ph.D. at Carnegie Mellon University: if not this year, early next year at the latest.
 
