--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -29,7 +29,7 @@ In 2013, I decided I wanted to start grad school to _really_ learn about a progr
 
 A "special student" means a couple different things.  First, that you have to carry around a bright pink slip to all of your courses on the first day of classes begging to be admitted to the professor of the class, as you are not a degree student.  Second, that you have to pay your own way --- at the time, $6k a course.  I doubled down, got my slips signed, and blew a family inheritance to take my courses.  I took a database seminar (not knowing what a seminar was) and a programming language course with Coq (not knowing what Coq or programming languages really were, outside of writing computer programs.)  I got lucky in that both of my course projects were decent.  In fact, I dicussed one at RICON, the distributed systems conference in 2013: my work on writing CRDT proofs --- really, really, awful trivial proofs, but the first person to actually _try_ writing proofs for CRDTs --- and it seemingly got me noticed by many people in the field.  I was in!
 
-In 2014, Basho established a research consortium with a number of universities in the European Union to work on the development of CRDTs for use inside of Riak.  I wasn't invited, but several of my friends/colleagues were.  One January evening, lying in bed with the flu in my parents spare bedroom a few days after Christmas, I asked a colleague where they were going in Europe.  When I found out, I applied for a Delta credit card, was accepted, bought a flight, asked my colleague if I could room with him for the event, booked an AirBnb in the city, and just showed up there myself and said "hey, I'm with Basho."  From then on, I became involed in the research project in several capactities over time.
+In 2014, Basho established a research consortium with a number of universities in the European Union to work on the development of CRDTs for use inside of Riak.  I wasn't invited, but several of my friends/colleagues were.  One January evening, lying in bed with the flu in my parents spare bedroom a few days after Christmas, I asked a colleague where they were going in Europe.  When I found out, I applied for a Delta credit card, was accepted, bought a flight, asked my colleague if I could room with him for the event, booked an AirBnb in the city, and just showed up there myself and said "hey, I'm with Basho."  From then on, I became involed in the research project in several different capactities over time.
 
 I got to work on various CRDT related research projects, ultimately building a new programming model and (partially) overseeing the development of a database called Floppystore, which became a database called Antidote DB.  I visited Rovio and a number of our other clients in various countries.  I gave talks at a bunch of conferences, collaborated with many different folks across organization and companies, and finally dissapointed with my job during the decline of Basho --- I was working on testing, which ultimately became my Ph.D. --- decided to quit my job and do a Ph.D. in CRDTs once I published my first research paper.
 
