--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -33,7 +33,7 @@ In 2014, Basho established a research consortium with a number of universities i
 
 I got to work on various CRDT related research projects, ultimately building a new programming model and (partially) overseeing the development of a database called Floppystore, which became a database called Antidote DB.  I visited Rovio and a number of our other clients in various countries.  I gave talks at a bunch of conferences, collaborated with many different folks across organization and companies, and finally dissapointed with my job during the decline of Basho --- I was working on testing, which ultimately became my Ph.D. --- decided to quit my job and do a Ph.D. in CRDTs once I published my first research paper.
 
-At that point, it was _on_.  I literally donated all of my belongings that I had accumulated at 30 years old to charity, and with only a single suitcase and carry-on, moved to San Francisco for several months to work a contract job on formal verification --- which I knew nothing about --- and then when finished proceeded with my move to Europe for my Ph.D.  
+At that point, it was _on_.  I literally donated all of my belongings that I had accumulated at 30 years old to charity, and with only a single suitcase and carry-on, moved to San Francisco for several months to work a contract job on formal verification --- which I knew nothing about --- and then when finished with that contract, proceeded with my move to Europe for my Ph.D.  
 
 Things were looking up.
 
